# run-the-world-LD38

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.DOS  Makefile.emsdk  README.md  minimal.html
DOSVersion/: CDOSRenderer.cpp  CDOSRenderer.h  main.cpp
SDLVersion/: CSDLRenderer.cpp  CSDLRenderer.h  main.cpp
include/: CGame.h  CRenderer.h  Common.h
include/Modules/Gameplay/: Gameplay.h
include/Modules/Gameplay/Entities/: CGameSession.h  CLevel.h
include/Modules/Gameplay/Interactor/: CGameplayInteractor.h
include/Modules/Gameplay/Presenter/: CGameplayPresenter.h  CLevelPresenter.h
include/Modules/Gameplay/Router/: CGameplayRouter.h
include/Modules/Gameplay/View/: CGameSessionView.h  CGameplayView.h
include/Modules/HighScoresScreen/: HighScores.h
include/Modules/HighScoresScreen/Interactor/: CHighScoresScreenInteractor.h
include/Modules/HighScoresScreen/Presenter/: CHighScoresScreenPresenter.h
include/Modules/HighScoresScreen/Router/: CHighScoresScreenRouter.h
include/Modules/HighScoresScreen/View/: CHighScoresScreenView.h
include/Modules/TitleScreen/: TitleScreen.h
include/Modules/TitleScreen/Interactor/: CTitleScreenInteractor.h
include/Modules/TitleScreen/Presenter/: CTitleScreenPresenter.h
include/Modules/TitleScreen/Router/: CTitleScreenRouter.h
include/Modules/TitleScreen/View/: CPlayButton.h  CRect.h  CTitleScreenView.h
include/Vipper/: IEntity.h  IInteractor.h  IPresenter.h  IRenderer.h  IRouter.h  IView.h  Vipper.h
src/: CGame.cpp
src/Modules/Gameplay/Entities/: CGameSession.cpp  CLevel.cpp
src/Modules/Gameplay/Interactor/: CGameplayInteractor.cpp
src/Modules/Gameplay/Presenter/: CGameplayPresenter.cpp  CLevelPresenter.cpp
src/Modules/Gameplay/Router/: CGameplayRouter.cpp
src/Modules/Gameplay/View/: CGameplayView.cpp
src/Modules/HighScoresScreen/Interactor/: CHighScoresScreenInteractor.cpp
src/Modules/HighScoresScreen/Presenter/: CHighScoresScreenPresenter.cpp
src/Modules/HighScoresScreen/Router/: CHighScoresScreenRouter.cpp
src/Modules/HighScoresScreen/View/: CHighScoresScreenView.cpp
src/Modules/TitleScreen/Interactor/: CTitleScreenInteractor.cpp
src/Modules/TitleScreen/Presenter/: CTitleScreenPresenter.cpp
src/Modules/TitleScreen/Router/: CTitleScreenRouter.cpp
src/Modules/TitleScreen/View/: CPlayButton.cpp  CRect.cpp  CTitleScreenView.cpp
src/Vipper/: IEntity.cpp  IInteractor.cpp  IPresenter.cpp  IRenderer.cpp  IRouter.cpp  IView.cpp
